<resources>
    <string name="app_name">PasswordGenerator</string>
    <string name="copy_button">Copy Button</string>
    <string name="special_chars">Special Characters</string>
    <string name="password_size">Password Size:</string>
    <string name="_4">4</string>
    <string name="password">Password</string>
    <string name="include">Include:</string>
    <string name="numbers">Numbers (0-9)</string>
    <string name="letters">Lowercase (a-z)</string>
    <string name="uppercase_a_z">Uppercase (A-Z)</string>
    <string name="generate">Generate</string>
    <string name="password_generator">Password Generator</string>
    <string name="_8">8</string>
</resources>