<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/copyButton"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <ImageButton
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/copy_button"
            android:src="@drawable/copy_icon"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:text="@string/password_size"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordSizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_4"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/passwordSizeSlider"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/CustomSliderStyle"
        android:stepSize="1"
        android:valueFrom="4"
        android:valueTo="20"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/include"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSizeSlider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lowercaseSwitch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:checked="true"
        android:text="@string/letters"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/uppercaseSwitch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:checked="true"
        android:text="@string/uppercase_a_z"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowercaseSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/numbersSwitch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:checked="true"
        android:text="@string/numbers"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uppercaseSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/specialCharsSwitch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/special_chars"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersSwitch" />


    <Button
        android:id="@+id/generateButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharsSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>